# metsor

./: .gitignore  README.md  pyproject.toml
main/metsor/: __main__.py
main/metsor/src/: checker.py  database.py  sort.py  undo.py
