[tool.poetry]
name = "metsor"
version = "1.0.0"
description = ""
authors = ["marcelm9 <marcel.menzel09@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "metsor", from = "main" }]

[tool.poetry.dependencies]
python = "^3.11"
ast-comments = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
